Corrected js and css file link

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="carousel.js"></script>
-    <link rel="stylesheet" type="text/css" href="carousel.css" />
+    <script src="carousel.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="carousel.min.css" />
     <title>Carousel</title>
   </head>
   <body>
