Fixed missing > in input

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       duration: <input value="1000" id="rotationDuration">, // How long the movement takes
     },
     buttons: {
-      hide: "<input value="false" id="buttonHide", // Whether to hide the buttons
+      hide: "<input value="false" id="buttonHide">, // Whether to hide the buttons
       disableForSingle: <input value="false" id="disableForSingle">, // Disables the buttons when there is only one element in the carousel
     },
     display: {
